2004-05-30  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* configure.in: ditto
	* autoconf/Makefile.am (EXTRA_DIST): ditto
	* autoconf/gtk-2.0.m4: add.

2004-05-30  dai <dai@kip.iis.toyama-u.ac.jp>

	* interface/gtk_i.c : GTK+ 2.x support

2004-05-30  Keishi Suenaga <s_keishi@mutt.freemail.ne.jp>

	* configure.in 
	  interface.h.in 
	  interface/Makefile.am 
	  interface/vt100_c.c
	  libarc/Makefile.am 
	  libunimod/Makefile.am 
	  libunimod/unimod_priv.h
	  timidity/Makefile.am 
	  timidity/common.c 
	  timidity/gogo_a.c
	  timidity/sysdep.h 
	  timidity/timidity.c
	  timidity/version.c
	  utils/Makefile.am 
	  utils/support.h 
	  utils/tmdy_getopt.h
	  interface/ncurs_c.c
	Can compile OpenWatcom in Msys or Cygwin environment.
	added file
	  doc/README.win32
	  doc/ja_jp.eucJP/README-win32
	  scripts/wcc386_w.sh
	Compile instructions for Mingw, Borland C, Watcom C and  Visual C

2004-05-24  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* libunimod/load_mod.c (ConvertNote): Bug fix

2004-05-24  Keishi Suenaga <s_keishi@mutt.freemail.ne.jp>

	* configure.in
	  interface/Makefile.am
	  libarc/Makefile.am
	  libunimod/Makefile.am
	  timidity/Makefile.am
	  timidity/sysdep.h
	  utils/Makefile.am
	  utils/nkflib.c
	  utils/support.h
	  timidity/wrdt.c
	  timidity/flac_a.c
	  timidity/timidity.c
	  timidity/timidity.c
	  interface/wrdt_wcon.c:
	  Can compile VCC or BCC in Msys or Cygwin environment.
	* timidity/timidity.c
	  interface.h.in:
	  Don't use ANOTHER_MAIN in timw32g and twsyn.

2004-05-23  Kentaro Sato <kentaro@ranvis.com>

	* timidity/timidity.c: Fixed to compile with MrC.

2004-05-19  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/w32g_syn.c: Fix to fit with case of "current" version
	* timidity/timidity.c: Fix typo

2004-05-18  Keishi Suenaga <s_keishi@mutt.freemail.ne.jp>

	* configure.in:
	  Add gcc option -mms-bitfield in windows.
	  GOGO ditection for windows fix.
	  Can use gccXXX in CYGWIN and MSYS.